# exploration_ros

./: .gitignore  CMakeLists.txt  Multi-robot.txt  README.md  config.rviz  package.xml
action/: Explorer.action
config/diago/navigation/: base_local_planner_params.yaml  global_costmap_params.yaml  move_base_params.yaml
config/diago/rviz/: diago.rviz  diago_multirobot.rviz
config/diago1/: navigation
config/diago1/rviz/: diago.rviz
config/my_diago1/navigation/: base_global_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml
config/my_diago1/rviz/: diago.rviz  diago_multirobot.rviz
config/my_diago2/navigation/: global_costmap_params.yaml
config/my_diago2/rviz/: diago.rviz  diago_multirobot.rviz
config/robot_0/: localization
config/robot_0/rviz/: diago.rviz  diago_multirobot.rviz
config/robot_1/rviz/: diago.rviz  diago_multirobot.rviz
launch/: 1RobotStage.launch  bagMapper.launch  bag_mapper.launch  calibration.launch  cg_slam1.launch  cg_slam2.launch  exp1.launch  exp2.launch  exp_w_external_slam.launch  manual_calibration.launch  multirobot_exploration.launch  multirobot_exploration_using_stage_environment_params.launch  multirobot_stage_environment.launch  my_stage_experiment.launch  my_stage_experiment_with_ns.launch  realExperiment.launch  real_experiment.launch  rviz.launch  single_robot_ros_planner.launch  singlerobot_exploration.launch  srrg_scan_matcher.launch  stageExperiment.launch  stage_experiment.launch  tutorial.launch
maps/: hospital.world  hospital.yaml  saman.world  saman.yaml  saman_base.inc
maps/include/: box.inc  marrtino.inc  segway.inc
marrtino/: marrtino_hokuyo_guess.txt  marrtino_transforms.txt
move_base_config/: amcl_node_hospital.xml  base_global_planner_param.yaml  base_global_planner_params.yaml  base_global_planner_params_stage.yaml  base_local_planner_params.yaml  costmap_common_params.yaml  costmap_common_params_stage.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base.xml  move_base_stage.xml  slam_gmapping.xml
msg/: Goal.msg
robot_data/: marrtino_hokuyo_guess.txt
src/: CMakeLists.txt  frontier_planner.cpp  goal_check.cpp  graph2occupancy.cpp  graph2occupancy.h  graph_ros_publisher.cpp  graph_ros_publisher.h  ros_handler.cpp  sim_mrslam(BACKUP).cpp  sim_mrslam.cpp  slam_node.cpp  tf_manager.cpp  tf_manager.h
src/exploration/: fake_projector.cpp  fake_projector.h  frontier_detector.cpp  frontier_detector.h  goal_planner.cpp  goal_planner.h  graph2occupancy.cpp  graph2occupancy.h  paths_rollout.cpp  paths_rollout.h
src/explorer/: CMakeLists.txt  ExplorerAction.cpp  ExplorerClient.cpp  explorer_server.cpp  explorer_server.h  explorer_server_node.cpp
src/map_creation/: graph2occupancy.cpp  graph2occupancy.h  occupancy_map_server.cpp  occupancy_map_server.h
src/modules/: frontier_detector.cpp  frontier_detector.h
src/nodes/: CMakeLists.txt  frontier_planner.cpp  goal_check.cpp  mapper_node.cpp  slam_node.cpp
src/sr_ros_utils/: ros_handler.cpp  ros_handler.h  ros_handler_sr.cpp  ros_handler_sr.h
src/utils/: my_matrix.h
srv/: DoSomething.srv  FrontierTrade.srv
stagefiles/: hospital.world  tutorial2.world
